<resources>
	<string name="app_name">HI5 용접 관리</string>

	<string name="main_activity_exit_format">"뒤로 버튼을 %s번 더 누르시면 종료 됩니다"</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">설정</string>
	<string name="action_backup">백업(복원)</string>
	<string name="action_exit">종료</string>

	<string name="OutputData">출력</string>
	<string name="OutputType">종류</string>
	<string name="SqueezeForce">가 압 력</string>
	<string name="MoveTipClearance">이동극 제거율</string>
	<string name="FixedTipClearance">고정극 제거율</string>
	<string name="PannelThickness">패널 두께</string>
	<string name="CommandOffset">명령 옵셋</string>

	<string name="Editor_OutputData">출력 데이터 (Output data)</string>
	<string name="Editor_OutputType">출력 종류</string>
	<string name="Editor_SqueezeForce">가압력</string>
	<string name="Editor_MoveTipClearance">이동극 제거율</string>
	<string name="Editor_FixedTipClearance">고정극 제거율</string>
	<string name="Editor_PannelThickness">패널 두께</string>
	<string name="Editor_CommandOffset">명령 옵셋</string>
	<string name="Editor_BeginNumber">시작 번호</string>

	<string name="no_files_or_directories">No files or directories</string>
	<string name="wcd_edit">선택 항목 수정</string>
	<string name="wcd_ok">확인</string>
	<string name="Load">읽기</string>
	<string name="Settings">설정</string>
	<string name="Backup">백업</string>
	<string name="Share">공유</string>
	<string name="Save">저장</string>
	<string name="Exit">종료</string>
	<string name="WorkPath">작업 경로</string>
	<string name="BackupPath">백업 경로</string>
	<string name="Read">읽기</string>
	<string name="View">보기</string>
	<string name="Edit">수정</string>

	<string name="work_path_fragment">작업 경로</string>
	<string name="weld_count_fragment">용접 카운트</string>
	<string name="weld_condition_fragment">용접 조건</string>
	<string name="backup_path_fragment">백업</string>
	<string name="text_view_fragment">파일 보기</string>

	<string name="nav_weld_count">용접 카운트</string>
	<string name="nav_weld_condition">용접 조건</string>
	<string name="nav_path_settings">이동</string>
	<string name="nav_storage">저장소</string>
	<string name="nav_sdcard">내부 저장소</string>
	<string name="nav_extsdcard">SD 카드</string>
	<string name="nav_usbstorage">USB 저장소</string>
	<string name="nav_app_exit">앱</string>
	<string name="nav_exit">종료</string>
	<string name="nav_backup">@string/action_backup</string>
	<string name="nav_restore">복원</string>
	<string name="nav_home">홈</string>
	<string name="nav_up">위로</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">프레그먼트</string>
	<string name="title_activity_backup">@string/action_backup</string>

	<!-- -
		This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
		For more information, see https://support.google.com/admob/answer/3052638
	<!- -->
	<string name="banner_ad_unit_id_debug">ca-app-pub-3940256099942544/6300978111</string>
	<string name="banner_ad_unit_id_release">ca-app-pub-4103700007170181/6544598462</string>
	<string name="banner_ad_unit_id">@string/banner_ad_unit_id_debug</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Strings related to Settings -->

	<!-- Example General settings -->
	<string name="pref_header_general">General</string>

	<string name="pref_title_social_recommendations">Enable social recommendations</string>
	<string name="pref_description_social_recommendations">Recommendations for people to contact
		based on your message history
	</string>

	<string name="pref_title_display_name">Display name</string>
	<string name="pref_default_display_name">John Smith</string>

	<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
	<string-array name="pref_example_list_titles">
		<item>Always</item>
		<item>When possible</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_example_list_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>

	<!-- Example settings for Data & Sync -->
	<string name="pref_header_data_sync">Data &amp; sync</string>

	<string name="pref_title_sync_frequency">Sync frequency</string>
	<string-array name="pref_sync_frequency_titles">
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_sync_frequency_values">
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>-1</item>
	</string-array>

	<string name="pref_title_system_sync_settings">System sync settings</string>

	<!-- Example settings for Notifications -->
	<string name="pref_header_notifications">Notifications</string>

	<string name="pref_title_new_message_notifications">New message notifications</string>

	<string name="pref_title_ringtone">Ringtone</string>
	<string name="pref_ringtone_silent">Silent</string>

	<string name="pref_title_vibrate">Vibrate</string>
	<string name="title_activity_text_scrolling">TextScrollingActivity</string>
	<string name="large_text">
		"Material is the metaphor.\n\n"

		"A material metaphor is the unifying theory of a rationalized space and a system of motion."
		"The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
		"technologically advanced and open to imagination and magic.\n"
		"Surfaces and edges of the material provide visual cues that are grounded in reality. The "
		"use of familiar tactile attributes helps users quickly understand affordances. Yet the "
		"flexibility of the material creates new affordances that supercede those in the physical "
		"world, without breaking the rules of physics.\n"
		"The fundamentals of light, surface, and movement are key to conveying how objects move, "
		"interact, and exist in space and in relation to each other. Realistic lighting shows "
		"seams, divides space, and indicates moving parts.\n\n"

		"Bold, graphic, intentional.\n\n"

		"The foundational elements of print based design typography, grids, space, scale, color, "
		"and use of imagery guide visual treatments. These elements do far more than please the "
		"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
		"imagery, large scale typography, and intentional white space create a bold and graphic "
		"interface that immerse the user in the experience.\n"
		"An emphasis on user actions makes core functionality immediately apparent and provides "
		"waypoints for the user.\n\n"

		"Motion provides meaning.\n\n"

		"Motion respects and reinforces the user as the prime mover. Primary user actions are "
		"inflection points that initiate motion, transforming the whole design.\n"
		"All action takes place in a single environment. Objects are presented to the user without "
		"breaking the continuity of experience even as they transform and reorganize.\n"
		"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
		"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

		"3D world.\n\n"

		"The material environment is a 3D space, which means all objects have x, y, and z "
		"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
		"positive z-axis extending towards the viewer. Every sheet of material occupies a single "
		"position along the z-axis and has a standard 1dp thickness.\n"
		"On the web, the z-axis is used for layering and not for perspective. The 3D world is "
		"emulated by manipulating the y-axis.\n\n"

		"Light and shadow.\n\n"

		"Within the material environment, virtual lights illuminate the scene. Key lights create "
		"directional shadows, while ambient light creates soft shadows from all angles.\n"
		"Shadows in the material environment are cast by these two light sources. In Android "
		"development, shadows occur when light sources are blocked by sheets of material at "
		"various positions along the z-axis. On the web, shadows are depicted by manipulating the "
		"y-axis only. The following example shows the card with a height of 6dp.\n\n"

		"Resting elevation.\n\n"

		"All material objects, regardless of size, have a resting elevation, or default elevation "
		"that does not change. If an object changes elevation, it should return to its resting "
		"elevation as soon as possible.\n\n"

		"Component elevations.\n\n"

		"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
		"does not vary from 6dp in one app to 16dp in another app).\n"
		"Components may have different resting elevations across platforms, depending on the depth "
		"of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

		"Responsive elevation and dynamic elevation offsets.\n\n"

		"Some component types have responsive elevation, meaning they change elevation in response "
		"to user input (e.g., normal, focused, and pressed) or system events. These elevation "
		"changes are consistently implemented using dynamic elevation offsets.\n"
		"Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
		"to the component’s resting state. They ensure that elevation changes are consistent "
		"across actions and component types. For example, all components that lift on press have "
		"the same elevation change relative to their resting elevation.\n"
		"Once the input event is completed or cancelled, the component will return to its resting "
		"elevation.\n\n"

		"Avoiding elevation interference.\n\n"

		"Components with responsive elevations may encounter other components as they move between "
		"their resting elevations and dynamic elevation offsets. Because material cannot pass "
		"through other material, components avoid interfering with one another any number of ways, "
		"whether on a per component basis or using the entire app layout.\n"
		"On a component level, components can move or be removed before they cause interference. "
		"For example, a floating action button (FAB) can disappear or move off screen before a "
		"user picks up a card, or it can move if a snackbar appears.\n"
		"On the layout level, design your app layout to minimize opportunities for interference. "
		"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
		"when a user tries to pick up one of cards.\n\n"
	</string>
</resources>
