<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
	        android:id="@+id/nav_weld_count"
	        android:icon="@drawable/ic_today_white"
	        android:title="@string/nav_weld_count" />
        <item
	        android:id="@+id/nav_weld_condition"
	        android:icon="@drawable/ic_view_list_white"
	        android:title="@string/nav_weld_condition" />
    </group>
    <item android:title="@string/nav_path_settings">
        <menu>
            <item
	            android:id="@+id/nav_home"
	            android:icon="@drawable/ic_home_white"
	            android:title="@string/nav_home"/>
	        <item
		        android:id="@+id/nav_storage"
		        android:icon="@drawable/ic_storage_white"
		        android:title="@string/nav_storage" />
            <item
	            android:id="@+id/nav_sdcard"
	            android:icon="@drawable/ic_memory_white"
	            android:title="@string/nav_sdcard" />
            <item
	            android:id="@+id/nav_extsdcard"
	            android:icon="@drawable/ic_sd_card_white"
	            android:title="@string/nav_extsdcard" />
            <item
	            android:id="@+id/nav_usbstorage"
	            android:icon="@drawable/ic_usb_white"
	            android:title="@string/nav_usbstorage" />
        </menu>
    </item>

    <item android:title="@string/nav_app_exit">
        <menu>
            <item
	            android:id="@+id/nav_backup"
	            android:icon="@drawable/ic_settings_backup_restore_white"
	            android:title="@string/nav_backup" />
            <item
	            android:id="@+id/nav_exit"
	            android:icon="@drawable/ic_exit_to_app_white"
	            android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>