<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="25sp"
                android:minWidth="25sp"
                android:paddingBottom="2sp"
                android:paddingEnd="5sp"
                android:paddingStart="5sp"
                android:paddingTop="2sp">

	<TextView
		android:id="@+id/tvOutputData"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_marginStart="5sp"
		android:gravity="start"
		android:hint="@string/OutputData"
		android:text="@string/OutputData"
		android:textSize="15sp"/>

	<TextView
		android:id="@+id/tvPanelThickness"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="10sp"
		android:layout_marginStart="10sp"
		android:gravity="end"
		android:hint="@string/PanelThickness"
		android:text="@string/PanelThickness"
		android:textSize="10sp"/>

	<TextView
		android:id="@+id/tvCommandOffset"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_below="@id/tvPanelThickness"
		android:layout_marginEnd="10sp"
		android:layout_marginStart="10sp"
		android:gravity="end|bottom"
		android:hint="@string/CommandOffset"
		android:text="@string/CommandOffset"
		android:textSize="10sp"/>

	<TextView
		android:id="@+id/tvMoveTipClearance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="10sp"
		android:layout_toStartOf="@id/tvPanelThickness"
		android:gravity="end"
		android:hint="@string/MoveTipClearance"
		android:text="@string/MoveTipClearance"
		android:textSize="10sp"/>

	<TextView
		android:id="@+id/tvOutputType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_toStartOf="@id/tvMoveTipClearance"
		android:gravity="center"
		android:hint="@string/OutputType"
		android:text="@string/OutputType"
		android:textSize="15sp"/>

	<EditText
		android:id="@+id/tvSqueezeForce"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_toEndOf="@id/tvOutputData"
		android:layout_toStartOf="@id/tvOutputType"
		android:gravity="center_horizontal"
		android:hint="@string/SqueezeForce"
		android:text="@string/SqueezeForce"
		android:background="@android:color/transparent"
		android:textSize="25sp"
		android:textStyle="bold"
		android:inputType="number"
		android:layout_marginStart="30sp"
		android:layout_marginEnd="30sp"
		android:selectAllOnFocus="true"
		android:longClickable="false"
		android:imeOptions="actionNext"/>

	<TextView
		android:id="@+id/tvFixedTipClearance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_below="@id/tvMoveTipClearance"
		android:layout_marginStart="10sp"
		android:layout_toStartOf="@id/tvCommandOffset"
		android:gravity="end|bottom"
		android:hint="@string/FixedTipClearance"
		android:text="@string/FixedTipClearance"
		android:textSize="10sp"/>
</RelativeLayout>