<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:minHeight="25px"
	android:minWidth="25px"
	android:paddingBottom="2dp"
	android:paddingLeft="5dp"
	android:paddingTop="2dp">
	<!--android:background="@color/tab2_textview_background">-->
	<TextView
		android:id="@+id/tvOutputData"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:gravity="right"
		android:hint="@string/OutputData"
		android:paddingLeft="4dp"
		android:text="@string/OutputData"
		android:textSize="15dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvOutputData"
		android:layout_marginLeft="5dp"
		android:gravity="right"
		android:hint="(Output data)"
		android:text="(Output data)"
		android:textSize="8dp"/>

	<TextView
		android:id="@+id/tvPanelThickness"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:gravity="right"
		android:hint="@string/PanelThickness"
		android:text="@string/PanelThickness"
		android:textSize="10dp"/>

	<TextView
		android:id="@+id/tvCommandOffset"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@id/tvPanelThickness"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="2dp"
		android:gravity="right|bottom"
		android:hint="@string/CommandOffset"
		android:text="@string/CommandOffset"
		android:textSize="10dp"/>

	<TextView
		android:id="@+id/tvMoveTipClearance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_toLeftOf="@id/tvPanelThickness"
		android:gravity="right"
		android:hint="@string/MoveTipClearance"
		android:text="@string/MoveTipClearance"
		android:textSize="10dp"/>

	<TextView
		android:id="@+id/tvOutputType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/tvMoveTipClearance"
		android:gravity="center"
		android:hint="@string/OutputType"
		android:paddingRight="4dp"
		android:text="@string/OutputType"
		android:textSize="15dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvOutputType"
		android:layout_toLeftOf="@id/tvMoveTipClearance"
		android:gravity="right"
		android:hint="(Output type)"
		android:text="(Output type)"
		android:textSize="8dp"/>

	<TextView
		android:id="@+id/tvSqueezeForce"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/tvOutputType"
		android:layout_toRightOf="@id/tvOutputData"
		android:gravity="center_horizontal"
		android:hint="@string/SqueezeForce"
		android:text="@string/SqueezeForce"
		android:textSize="15dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvSqueezeForce"
		android:layout_toLeftOf="@id/tvOutputType"
		android:layout_toRightOf="@id/tvOutputData"
		android:gravity="center_horizontal"
		android:hint="(Squeeze force)"
		android:text="(Squeeze force)"
		android:textSize="8dp"/>

	<TextView
		android:id="@+id/tvFixedTipClearance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvMoveTipClearance"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="2dp"
		android:layout_toLeftOf="@id/tvCommandOffset"
		android:gravity="right|bottom"
		android:hint="@string/FixedTipClearance"
		android:text="@string/FixedTipClearance"
		android:textSize="10dp"/>
</RelativeLayout>