<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/scrollView1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:minHeight="25px"
	android:minWidth="25px"
	android:padding="10dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:orientation="vertical">
		<!--소프트키보드를 안보이게 하기 위한 포커스 작업(focusable, focusableInTouchMode)-->
		<TextView
			android:id="@+id/statusText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:gravity="center"
			android:paddingBottom="4pt"
			android:textStyle="bold"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/textInputLayout1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/etOutputData"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:focusableInTouchMode="false"
				android:gravity="center"
				android:hint="@string/Editor_OutputData"
				android:inputType="none"
				android:selectAllOnFocus="true"
				android:textColor="#3498DB"
				android:textStyle="bold"
				android:visibility="visible"/>
		</android.support.design.widget.TextInputLayout>

		<SeekBar
			android:id="@+id/sampleSeekBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TableLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:stretchColumns="*">

			<TableRow>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/textInputLayout2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.v7.widget.AppCompatEditText
						android:id="@+id/etOutputType"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:hint="@string/Editor_OutputType"
						android:inputType="number"
						android:numeric="integer"
						android:selectAllOnFocus="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/textInputLayout3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.v7.widget.AppCompatEditText
						android:id="@+id/etSqueezeForce"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:hint="@string/Editor_SqueezeForce"
						android:inputType="number"
						android:numeric="integer"
						android:selectAllOnFocus="true"
						android:textStyle="bold"/>
				</android.support.design.widget.TextInputLayout>
			</TableRow>

			<TableRow>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/textInputLayout4"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<android.support.v7.widget.AppCompatEditText
						android:id="@+id/etMoveTipClearance"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:hint="@string/Editor_MoveTipClearance"
						android:inputType="numberDecimal"
						android:numeric="decimal"
						android:selectAllOnFocus="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/textInputLayout5"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<android.support.v7.widget.AppCompatEditText
						android:id="@+id/etFixedTipClearance"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:hint="@string/Editor_FixedTipClearance"
						android:inputType="numberDecimal"
						android:numeric="decimal"
						android:selectAllOnFocus="true"/>
				</android.support.design.widget.TextInputLayout>
			</TableRow>

			<TableRow>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/textInputLayout6"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<android.support.v7.widget.AppCompatEditText
						android:id="@+id/etPannelThickness"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:hint="@string/Editor_PannelThickness"
						android:inputType="numberDecimal"
						android:numeric="decimal"
						android:selectAllOnFocus="true"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:id="@+id/textInputLayout7"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<android.support.v7.widget.AppCompatEditText
						android:id="@+id/etCommandOffset"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:gravity="left"
						android:hint="@string/Editor_CommandOffset"
						android:inputType="numberDecimal"
						android:numeric="decimal"
						android:selectAllOnFocus="true"/>
				</android.support.design.widget.TextInputLayout>
			</TableRow>
		</TableLayout>

		<SeekBar
			android:id="@+id/sbBegin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_column="0"/>

		<SeekBar
			android:id="@+id/sbEnd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_column="0"
			android:rotation="180"/>
	</LinearLayout>
</ScrollView>